<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowFood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/item_photo"
                tools:src="@tools:sample/avatars"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/food_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:id="@+id/item_brief"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/food_brief"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/food_material_title"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/food_material_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/food_material"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="20dp"
            android:text="@string/food_material"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/food_step_title"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/food_step_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/food_step"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="20dp"
            android:text="@string/food_step"/>




    </LinearLayout>

</ScrollView>